src/monosat/api/Monosat.h

typedef Monosat::SimpSolver* SolverPtr;
typedef Monosat::GraphTheorySolver<int64_t>* GraphTheorySolver_long;
typedef Monosat::BVTheorySolver<int64_t>* BVTheoryPtr;
typedef Monosat::FSMTheorySolver* FSMTheorySolverPtr;
typedef Monosat::FlowRouter<int64_t>* FlowRouterPtr;
typedef int64_t Weight;
typedef void * SolverPtr;
typedef void *  BVTheoryPtr;
typedef void *  GraphTheorySolver_long;
typedef void *  FSMTheorySolverPtr;
typedef void *  FlowRouterPtr;
typedef int64_t Weight;
const char* getVersion(void);
SolverPtr newSolver(void);
//If set, dump constraints to this file (as they are asserted in the solver)
void setOutputFile(SolverPtr S, const char* output);
//Load a GNF, and run any embedded solve/optimize calls
void readGNF(SolverPtr S, const char* filename);
//Load a GNF, but ignore any embedded solve/optimize calls
void loadGNF(SolverPtr S, const char* filename);
bool solve(SolverPtr S);
bool solveAssumptions(SolverPtr S, int* assumptions, int n_assumptions);
//Solve under assumptions, and also minimize a set of BVs (in order of precedence)
//bool solveAssumptions_MinBVs(SolverPtr S,int * assumptions, int n_assumptions, int * minimize_bvs, int n_minimize_bvs);

// Sets the (approximate) time limit in seconds before returning l_Undef from solveLimited; ignored by solve().
// Set to <=0 to disable time limit.
// Note that setTimeLimit has no effect on OSX.
void setTimeLimit(SolverPtr S, int seconds);
//Sets the maximum number of (additional) conflicts allowed in the solver before returning l_Undef from solveLimited; ignored by solve(). Set to <0 to disable conflict limit.
void setConflictLimit(SolverPtr S, int num_conflicts);
//Sets the maximum number of (additional) propagations allowed in the solver before returning l_Undef from solveLimited; ignored by solve(). Set to <0 to disable propagation limit.
void setPropagationLimit(SolverPtr S, int num_propagations);
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
int solveLimited(SolverPtr S);
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
int solveAssumptionsLimited(SolverPtr S, int* assumptions, int n_assumptions);
//Solve under assumptions, and also minimize a set of BVs (in order of precedence)
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
//int solveAssumptionsLimited_MinBVs(SolverPtr S,int * assumptions, int n_assumptions, int * minimize_bvs, int n_minimize_bvs);

//If the solver is operating with limits on the number of conflicts, memory usage, or runtime (see the setXXXXXLimit() methods), then optimization queries
//are not guaranteed to produce an optimal (or locally optimal) solution.
//This function returns false if the last optimization call to the solver produced a non-optimal result due to such a limit, and true otherwise.
bool lastSolutionWasOptimal(SolverPtr S);
//If the last solution was UNSAT, and assumptions were enforced in the solver, then this get the 'conflict clause' produced by the solver (a subset of the assumptions which are sufficient to cause the instance to be UNSAT).
//Fills the given pointer with the first max_store_size literals of the conflict clause, and returns the number of literals in the conflict clause. Set store_clause to null and max_store_size to 0 to find the size of the conflict clause
//Returns -1 if the solver has no conflict clause from the most recent solve() call (because that call was not UNSAT)
int getConflictClause(SolverPtr S, int* store_clause, int max_store_size);
//Reduce the given set of mutually UNSAT assumptions into a (locally) minimal-sized set of assumptions that are still UNSAT.
//If the assumptions are not UNSAT, this method does returns -1.
//Else, it returns the number of literals in the unsat core, which it will also store in the first number_literals
//entries in unsat_assumptions
//Note: This method will make repeated (and potentially expensive) calls to the SAT solver to attempt to remove literals from the
//set of assumptions.
//Note also that if any of the setXXXXXLimits() are applied to the solver, this may not produce a locally minimal unsat core.
int minimizeUnsatCore(SolverPtr S, int* unsat_assumptions, int n_lits);
//After UNSAT solve calls with assumptions, the solver will find a 'conflict clause' consisting of a subset of the assumptions
//which are sufficient to make the solver UNSAT (see getConflictClause).
//Normally, the conflict clause is produced as a side effect of proving the query unsat, with the solver only removing literals
//from the conflict clause on a best effort basis.
//This method will make repeated (and potentially expensive) calls to the SAT solver to attempt to remove further literals from
//the conflict clause.
//Afterward, the conflict clause can be obtained using getConflictClause().
//NOTE: this function may be expensive, is not required to get a conflict clause; getConflictClause() can be used after any unsat call with assumptions, even
//without calling minimizeConflictClause().
//Note also that if any of the setXXXXXLimits() are applied to the solver, this may not produce a locally minimal conflict clause.
void minimizeConflictClause(SolverPtr S);
//Restart the solver after a solution (this will be done automatically in most circumstances, and so is not usually called)
//This only undoes the decisions made internally by the solver, without removing its variables or constraints.
void backtrack(SolverPtr S);
bool addClause(SolverPtr S, int* lits, int n_lits);
bool addUnitClause(SolverPtr S, int lit);
bool addBinaryClause(SolverPtr S, int lit1, int lit2);
bool addTertiaryClause(SolverPtr S, int lit1, int lit2, int lit3);
//Add n_pairs binary clauses: (first_args[0] OR second_args[0]) AND (first_args[1] OR second_args[1])...
void addBinaryClauses(SolverPtr S, int* first_args, int* second_args, int n_pairs);
//remove any optimization objectives from the solver
void clearOptimizationObjectives(SolverPtr S);
void maximizeBV(SolverPtr S, BVTheoryPtr bv, int bvID);
//this enables a heuristic on this graph, from the RUC paper, which sets assigned edges to zero weight, to encourage edge-reuse in solutions
void graph_setAssignEdgesToWeight(SolverPtr S, GraphTheorySolver_long G, int64_t weight);
//flow routing interface

FlowRouterPtr createFlowRouting(SolverPtr S, GraphTheorySolver_long G, int sourceNode, int destNode, int maxflowLit);
void addRoutingNet(SolverPtr S, GraphTheorySolver_long G, FlowRouterPtr router, int disabledEdge, int n_members,
                   int* edge_lits, int* reach_lits);
int newFSM(SolverPtr S, FSMTheorySolverPtr fsmTheory, int inputAlphabet, int outputAlphabet);
int newState(SolverPtr S, FSMTheorySolverPtr fsmTheory, int fsmID);
// Note: label 0 is the non-consuming epsilon label
int newTransition(SolverPtr S, FSMTheorySolverPtr fsmTheory, int fsmID, int fromNode, int toNode, int inputLabel,
                  int outputLabel);
// String constant. str is an array of len non-negative integers, representing the characters in the string.
int newString(SolverPtr S, FSMTheorySolverPtr fsmTheory, int* str, int len);
int fsmAcceptsString(SolverPtr S, FSMTheorySolverPtr fsmTheory, int fsmID, int startNode, int acceptNode, int stringID);
int fsmCompositionAccepts(SolverPtr S, FSMTheorySolverPtr fsmTheory, int fsmGeneratorID, int fsmAcceptorID,
                          int gen_startNode, int gen_acceptNode, int acceptor_startNode, int acceptor_acceptNode,
                          int stringID);
//For a given literal (not variable!), returns 0 for true, 1 for false, 2 for unassigned.
int getModel_Literal(SolverPtr S, int lit);
//Get an assignment to a bitvector in the model. The model may find a range of satisfying assignments to the bitvector;
//If getMaximumValue is true, this function returns the maximum satisfying assignment to the bitvector in the model; else it returns the smallest.
Weight getModel_BV(SolverPtr S, BVTheoryPtr bv, int bvID, bool getMaximumValue);
//graph queries:
//maxflow_literal is the literal (not variable!) that is the atom for the maximum flow query
Weight getModel_MaxFlow(SolverPtr S, GraphTheorySolver_long G, int maxflow_literal);
//maxflow_literal is the literal (not variable!) that is the atom for the maximum flow query
Weight getModel_EdgeFlow(SolverPtr S, GraphTheorySolver_long G, int maxflow_literal, int edgeLit);
Weight getModel_AcyclicEdgeFlow(SolverPtr S, GraphTheorySolver_long G, int maxflow_literal, int edgeLit);
Weight getModel_MinimumSpanningTreeWeight(SolverPtr S, GraphTheorySolver_long G, int spanning_tree_literal);
int getModel_Path_Nodes_Length(SolverPtr S, GraphTheorySolver_long G, int reach_or_distance_literal);
int
getModel_Path_Nodes(SolverPtr S, GraphTheorySolver_long G, int reach_or_distance_literal, int store_length, int* store);
int getModel_Path_EdgeLits_Length(SolverPtr S, GraphTheorySolver_long G, int reach_or_distance_literal);
int getModel_Path_EdgeLits(SolverPtr S, GraphTheorySolver_long G, int reach_or_distance_literal, int store_length,
                           int* store);