src/monosat/api/python/monosat/monosat_c.py


            self.monosat_c.newFSM.argtypes = [c_solver_p, c_fsm_theory_p, c_int, c_int]
            self.monosat_c.newFSM.restype = c_int

            self.monosat_c.newState.argtypes = [c_solver_p, c_fsm_theory_p, c_int]
            self.monosat_c.newState.restype = c_int

            self.monosat_c.newTransition.argtypes = [
                c_solver_p,
                c_fsm_theory_p,
                c_int,
                c_int,
                c_int,
                c_int,
                c_int,
            ]
            self.monosat_c.newTransition.restype = c_int

            self.monosat_c.newString.argtypes = [
                c_solver_p,
                c_fsm_theory_p,
                c_int_p,
                c_int,
            ]
            self.monosat_c.newString.restype = c_int

            self.monosat_c.fsmAcceptsString.argtypes = [
                c_solver_p,
                c_fsm_theory_p,
                c_int,
                c_int,
                c_int,
                c_int,
            ]
            self.monosat_c.fsmAcceptsString.restype = c_int

            self.monosat_c.fsmCompositionAccepts.argtypes = [
                c_solver_p,
                c_fsm_theory_p,
                c_int,
                c_int,
                c_int,
                c_int,
                c_int,
                c_int,
                c_int
            ]
            self.monosat_c.fsmCompositionAccepts.restype = c_int

            self.monosat_c.getModel_Literal.argtypes = [c_solver_p, c_literal]
            self.monosat_c.getModel_Literal.restype = c_int

            self.monosat_c.getModel_BV.argtypes = [c_solver_p, c_bv_p, c_bvID, c_bool]
            self.monosat_c.getModel_BV.restype = c_int64

            self.monosat_c.getModel_MaxFlow.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
            ]
            self.monosat_c.getModel_MaxFlow.restype = c_int64

            self.monosat_c.getModel_EdgeFlow.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
                c_literal,
            ]
            self.monosat_c.getModel_EdgeFlow.restype = c_int64

            self.monosat_c.getModel_AcyclicEdgeFlow.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
                c_literal,
            ]
            self.monosat_c.getModel_AcyclicEdgeFlow.restype = c_int64

            self.monosat_c.getModel_MinimumSpanningTreeWeight.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
            ]
            self.monosat_c.getModel_MinimumSpanningTreeWeight.restype = c_int64

            self.monosat_c.getModel_Path_Nodes_Length.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
            ]
            self.monosat_c.getModel_Path_Nodes_Length.restype = c_int

            self.monosat_c.getModel_Path_Nodes.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
                c_int,
                c_int_p,
            ]
            self.monosat_c.getModel_Path_Nodes.restype = c_int

            self.monosat_c.getModel_Path_EdgeLits_Length.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
            ]
            self.monosat_c.getModel_Path_EdgeLits_Length.restype = c_int

            self.monosat_c.getModel_Path_EdgeLits.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal,
                c_int,
                c_int_p,
            ]
            self.monosat_c.getModel_Path_EdgeLits.restype = c_int

            self.monosat_c.createFlowRouting.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_literal,
            ]
            self.monosat_c.createFlowRouting.restype = c_int64

            self.monosat_c.addRoutingNet.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int64,
                c_literal,
                c_int,
                c_literal_p,
                c_literal_p,
            ]

            self.monosat_c.graph_setAssignEdgesToWeight.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int64,
            ]

        self.solver = None
        self.newSolver()
        # For many (but not all) instances, the following settings may give good performance:
        # self.newSolver("-verb=0 -verb-time=0 -rnd-theory-freq=0.99 -no-decide-bv-intrinsic  -decide-bv-bitwise  -decide-graph-bv -decide-theories -no-decide-graph-rnd   -lazy-maxflow-decisions -conflict-min-cut -conflict-min-cut-maxflow -reach-underapprox-cnf -check-solution ")

    def _getManagers(self):
        solver = self.getSolver()
        if solver not in self._managers:
            self._managers[solver] = dict()
        return self._managers[solver]

    def getSolver(self):
        return self.solver

    def setSolver(self, solver):
        self.solver = solver

    def getVersion(self):
        return self.monosat_c.getVersion()

    def init(self, arguments=None, output_file=None):
        warnings.warn(
            "Monosat().init() is deprecated, use Monosat().newSolver() instead",
            DeprecationWarning,
        )
        return self.newSolver(arguments, output_file)

    def setOutputFile(self, output_file=None):
        warnings.warn(
            "Monosat().setOutputFile() is deprecated, use Monosat().newSolver(output_file=filename) instead",
            DeprecationWarning,
        )
        self.newSolver(arguments=self.solver.arguments, output_file=output_file)

    def newSolver(self, arguments=None, output_file=None, define_true=True):
        if self.solver is not None:
            self.solver.delete()
        self.solver = Solver(self.monosat_c, arguments, output_file)
        if define_true:
            self.solver._true = self.getTrue()
        return self.solver

    def loadConstraints(self, filename, process_solve_statements=False):
        if process_solve_statements:
            self.monosat_c.readGNF(self.solver._ptr, c_char_p(filename.encode("ascii")))
        else:
            self.monosat_c.loadGNF(self.solver._ptr, c_char_p(filename.encode("ascii")))

    def getEmptyIntArray(self, length):
        if length > len(self._int_array):
            self._int_array = (c_int * length)()
        return self._int_array

    def getIntArray(self, nums):
        if use_cython:
            return nums
        if len(nums) > len(self._int_array):
            self._int_array = (c_int * len(nums))()
        for i, n in enumerate(nums):
            self._int_array[i] = c_int(n)
        return self._int_array

    def getIntArray2(self, nums):
        if use_cython:
            return nums
        if len(nums) > len(self._int_array2):
            self._int_array2 = (c_int * len(nums))()
        for i, n in enumerate(nums):
            self._int_array2[i] = c_int(n)
        return self._int_array2

    def getLongArray(self, nums):
        if use_cython:
            return nums
        if len(nums) > len(self._long_array):
            self._long_array = (c_int64 * len(nums))()
        for i, n in enumerate(nums):
            self._long_array[i] = c_int64(n)
        return self._long_array

    def intArrayToList(self, array_pointer, length):
        ret = []
        for i in range(length):
            ret.append(array_pointer[i])
        return ret

    def setTimeLimit(self, seconds):
        if seconds is None or seconds < 0:
            self.monosat_c.setTimeLimit(self.solver._ptr, -1)
        else:
            self.monosat_c.setTimeLimit(self.solver._ptr, seconds)

    def setConflictLimit(self, conflicts):
        if conflicts is None or conflicts < 0:
            self.monosat_c.setConflictLimit(self.solver._ptr, -1)
        else:
            self.monosat_c.setConflictLimit(self.solver._ptr, conflicts)

    def setPropagationLimit(self, propagations):
        if propagations is None or propagations < 0:
            self.monosat_c.setPropagationLimit(self.solver._ptr, -1)
        else:
            self.monosat_c.setPropagationLimit(self.solver._ptr, propagations)

    def lastSolutionWasOptimal(self):
        return self.monosat_c.lastSolutionWasOptimal(self.solver._ptr)

    def getConflictClause(self):
        conflict_size = self.monosat_c.getConflictClause(self.solver._ptr, null_ptr, 0)
        if conflict_size < 0:
            return None  # No conflict clause in the solver

        conflict_ptr = self.getEmptyIntArray(conflict_size)
        length = self.monosat_c.getConflictClause(
            self.solver._ptr, conflict_ptr, conflict_size
        )
        if length != conflict_size:
            raise RuntimeError("Error reading conflict clause")

        return self.intArrayToList(conflict_ptr, conflict_size)

    def minimizeUnsatCore(self, assumptions):
        lp = self.getIntArray(assumptions)

        core_size = self.monosat_c.minimizeUnsatCore(
            self.solver._ptr, lp, len(assumptions)
        )
        assert core_size >= 0
        assert core_size <= len(assumptions)
        return self.intArrayToList(lp, core_size)

    def minimizeConflictClause(self):
        self.monosat_c.minimizeConflictClause(self.solver._ptr)

    def solve(self, assumptions=None):
        self.backtrack()
        if assumptions is None:
            assumptions = []

        lp = self.getIntArray(assumptions)

        return self.monosat_c.solveAssumptions(self.solver._ptr, lp, len(assumptions))

    def solveLimited(self, assumptions=None):
        self.backtrack()
        if assumptions is None:
            assumptions = []

        lp = self.getIntArray(assumptions)

        r = self.monosat_c.solveAssumptionsLimited(
            self.solver._ptr, lp, len(assumptions)
        )

        if r == 0:
            return True
        elif r == 1:
            return False
        else:
            assert r == 2
            return None

    def backtrack(self):
        return self.monosat_c.backtrack(self.solver._ptr)

    def addUnitClause(self, clause):

        if isinstance(clause, int):
            self.monosat_c.addUnitClause(self.solver._ptr, clause)
        elif len(clause) == 1:
            self.monosat_c.addUnitClause(self.solver._ptr, clause[0])
        else:
            assert False

    def addBinaryClause(self, l0, l1):
        self.monosat_c.addBinaryClause(self.solver._ptr, l0, l1)

    # clauses should be a list of pairs of literals, each of which will be added as a binary clause
    def addBinaryClauses(self, clauses):

        if len(clauses) == 1:
            self.addBinaryClause(clauses[0][0], clauses[0][1])
        else:
            firsts, seconds = zip(*clauses)

            first_p = self.getIntArray(firsts)
            second_p = self.getIntArray2(seconds)
            self.monosat_c.addBinaryClauses(
                self.solver._ptr, first_p, second_p, len(clauses)
            )

    def addTertiaryClause(self, l0, l1, l2):
        self.monosat_c.addTertiaryClause(self.solver._ptr, l0, l1, l2)

    def addClause(self, clause):
        if isinstance(clause, int):
            self.addUnitClause(clause)
        elif len(clause) == 1:
            self.addUnitClause(clause[0])
        elif len(clause) == 2:
            self.addBinaryClause(clause[0], clause[1])
        elif len(clause) == 3:
            self.addTertiaryClause(clause[0], clause[1], clause[2])
        else:
            lp = self.getIntArray(clause)
            self.monosat_c.addClause(self.solver._ptr, lp, len(clause))

    def clearOptimizationObjectives(self):
        self.monosat_c.clearOptimizationObjectives(self.solver._ptr)

    def maximizeBV(self, bvID):
        self.monosat_c.maximizeBV(self.solver._ptr, self.solver.bvtheory, c_int(bvID))
